--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,11 +37,11 @@ jobs:
       run: |
         mkdir .zig && cd .zig
         curl -o zig.tar.xz "https://ziglang.org/download/0.13.0/zig-linux-x86_64-0.13.0.tar.xz" && tar -xJf zig.tar.xz && rm zig.tar.xz && mv * 123 && mv 123/* . && rm -d 123 && export PATH=$PWD:$PATH && cd ..
-        zig build -Dtarget="aarch64-linux-musl"   --release=fast -Dcpu="kryo"
+        zig build -Dtarget="aarch64-linux-musl"   --release -Dcpu="kryo"
 
     - name: Check
       run: |
-        ls -lah zig-out/
+        ls -lah zig-out/bin/
         ls -lah zig-out/bin/
 
   Small:
@@ -55,11 +55,11 @@ jobs:
       run: |
         mkdir .zig && cd .zig
         curl -o zig.tar.xz "https://ziglang.org/download/0.13.0/zig-linux-x86_64-0.13.0.tar.xz" && tar -xJf zig.tar.xz && rm zig.tar.xz && mv * 123 && mv 123/* . && rm -d 123 && export PATH=$PWD:$PATH && cd ..
-        zig build -Dtarget="aarch64-linux-musl" --release=small -Dcpu="kryo"
+        zig build -Dtarget="aarch64-linux-musl" --release -Dcpu="kryo"
 
     - name: Check
       run: |
-        ls -lah zig-out/
+        ls -la zig-out/bin/
         ls -lah zig-out/bin/
 
 
@@ -80,5 +80,5 @@ jobs:
 
     - name: Check
       run: |
-        ls -lah zig-out/
+        ls -la zig-out/bin/
         ls -lah zig-out/bin/
